--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,41 @@
 body{
-    
+    font-family:sans-serif;
+    background:#a4b4f4;
+    color:#000;
+}
+
+input[type='text']{
+    padding: 4px;
+    border-radius: 6px;
+    border: 1px #666 solid;
+}
+
+ul.messages{
+    margin: 0;
+    padding: 0;
+}
+
+ul.messages li{
+    padding: 5px 0;
+    margin: 4px 0;
+    list-style: none;
+    background: #8a537b;
+}
+
+footer{
+    margin-top: 40px;
+}
+
+.alert{
+    background: red;
+    color: white;
+    padding: 5px;
+    margin: 10px;
+}
+
+.success{
+    background: green;
+    color: black;
+    padding: 5px;
+    margin: 10px;
 }
